fix: Dont allow field overflow, wrap text
ref: #32

--- a/src/index.css
+++ b/src/index.css
@@ -1252,7 +1252,10 @@ section .content .section fieldset.inline .text {
   border-bottom: 1px solid var(--border-colour-form-field);
   display: inline-block;
   height: 25px;
-  min-width: 350px;
+  overflow-wrap: anywhere;
+  white-space: pre-wrap;
+  width: 350px;
+  word-wrap: break-word;
 }
 
 section .content .section fieldset.textarea div.markdown {
